# morph-demo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.bridge.config.ts  vitest.config.ts
docs/: app-recipe.md  architecture.md  competitive-landscape.md
docs/diagrams/: 01-pitch-hub.excalidraw  02-comic-strip.excalidraw  03-technical-architecture.excalidraw
scripts/: build-vendors.cjs
sidecar/: bridge.mjs  transform.mjs
src/: App.tsx  main.tsx  morph-global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/apps/: ai-studio.tsx  calendar.tsx  ci-capex-tracker.tsx  ci-data.ts  ci-entity-network.tsx  ci-entity-profile.tsx  ci-intel-map.tsx  ci-mystery-dossier.tsx  ci-power-rankings.tsx  ci-scenario-modeler.tsx  ci-signal-feed.tsx  ci-threat-matrix.tsx  ci-timeline.tsx  index.ts  markdown-notes.tsx  tax-assistant.tsx  travel-companion.tsx
src/components/: AppPanel.tsx  AppTab.tsx  ChatInput.tsx  ChatPanel.tsx  ChatSidebar.tsx  ConfigWidget.tsx  ExtensionsModal.tsx  ExtensionsStrip.tsx  FeatureTooltip.tsx  FileTree.tsx  MessageBubble.tsx  MiniThumbnail.tsx  MorphAboutModal.tsx  NewWorkspaceDialog.tsx  PermissionDialog.tsx  ShimmerSkeleton.tsx  Sidebar.tsx  ThinkingIndicator.tsx  ToolUseDisplay.tsx  WorkspacePanel.tsx  WorkspaceRail.tsx
src/hooks/: useBridge.ts  useEsbuild.ts
src/lib/: compiler.ts  event-processor.ts
src/stores/: chatStore.ts  settingsStore.ts  (+1 more)
(+29 files in other folders)
